--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ timezone:
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: ChrisGr Dev # the main title
+title: Chris Blog # the main title
 
 tagline: Aquí pondré las movidas que estoy haciendo # it will display as the subtitle
 
